# libpartikel

./: .gitignore  CMakeLists.txt  demo.c  editor.c  gui_file_dialog.h  partikel.h
